# scify-beta

./: .env  .gitignore  README.md  app.py  graph.py  pyproject.toml  requirements.txt  schemas.py  teste_ambiente.py
backend/: app.py  graph.py  prompts.py  requirements.txt  schemas.py
backend/.streamlit/: config.toml
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
scify/: package-lock.json  package.json
scify-web/: package-lock.json  package.json
scifyv2/: package-lock.json  package.json
scifyv2/app/: page.tsx
