[tool.poetry]
name = "sci-fi-v2"
version = "0.1.0"
description = "A scientific article search tool using LLMs and multiple search agents"
authors = ["leirbagdev <gabrmac@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
langchain = "^0.2.0"
langchain-core = "^0.2.0"
langchain-ollama = "^0.1.0"
pydantic = "^2.7.0"
streamlit = "^1.36.0"
python-dotenv = "^1.0.0"
tavily-python = "^0.3.0"

[tool.poetry.group.dev.dependencies]
poetry-core = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"